asterisk (1:11.13.1~dfsg-2) unstable; urgency=medium

  * New upstream release: fixes AST-2014-011 (CVE-2014-3566, POODLE).
  * Add a local gbp.conf for branch jessie
  * New patches for recent security issues (Closes: #771463):
    - AST-2014-014: High call load may result in hung channels in ConfBridge
    - AST-2014-017: Mark CONFBRIDGE as a sensitive function for external APIs
    - AST-2014-018: Mark DB as a sensitive function for external APIs
  * sanity check to avoid changing the ABI hash

 -- Tzafrir Cohen <tzafrir@debian.org>  Wed, 10 Dec 2014 06:44:45 +0200

asterisk (1:11.13.0~dfsg-1) unstable; urgency=medium

  * New upstream release.
    - Drop aelparse_manpage.patch and smsq_manpage.patch, fixed upstream.
  * Fix an out of bounds error in res_fax.c.
  * Allow res_calendar_ews to work with neon 0.30.x (Closes: #761677).
  * Build with all hardening options enabled.

 -- Jeremy Lainé <jeremy.laine@m4x.org>  Fri, 26 Sep 2014 12:30:57 +0200

asterisk (1:11.12.1~dfsg-1) unstable; urgency=high

  * New upstream security release, fixes:
    - AST-2014-010 a.k.a. CVE-2014-6610 (Closes: #762164).

 -- Jeremy Lainé <jeremy.laine@m4x.org>  Mon, 22 Sep 2014 09:53:31 +0200

asterisk (1:11.12.0~dfsg-1) unstable; urgency=medium

  * New upstream release.
    - Drop pbx_lua_regression patch, fixed upstream.
  * Make asterisk Provide asterisk-$$AST_BUILDOPT_SUM (Closes: #694805).

 -- Jeremy Lainé <jeremy.laine@m4x.org>  Wed, 20 Aug 2014 15:23:03 +0200

asterisk (1:11.11.0~dfsg-2) unstable; urgency=medium

  * Fix loading lua modules from pbx_lua (Closes: #756425).
  * Ship the aelparse utility (Closes: #747866).

 -- Jeremy Lainé <jeremy.laine@m4x.org>  Thu, 07 Aug 2014 13:00:58 +0200

asterisk (1:11.11.0~dfsg-1) unstable; urgency=medium

  * New upstream release.
    - Drop safe_asterisk-config and safe_asterisk-nobg patches, fixed upstream
      in bug ASTERISK-23492.
    - Update pjproject patch.
  * Remove svn-upgrade from watch file.
