@@ -1,7 +1,7 @@
 From 5927deff8aa3784ebb1ba3ada8d5c99b172642c7 Mon Sep 17 00:00:00 2001
 From: Mark Michelson <mmichelson@digium.com>
 Date: Thu, 20 Nov 2014 16:35:18 +0000
-Subject:  Fix error with mixed address family ACLs.
+Subject: Mixed IP address families in access control lists may permit unwanted traffic
 Origin: http://svnview.digium.com/svn/asterisk?view=rev&rev=428417
 CVE: CVE-2014-8412
 Bug: https://issues.asterisk.org/jira/browse/ASTERISK-24469
@@ -9,6 +9,8 @@ Bug: https://issues.asterisk.org/jira/browse/ASTERISK-24469
 Prior to this commit, the address family of the first item in an ACL
 was used to compare all incoming traffic. This could lead to traffic
 of other IP address families bypassing ACLs.
+
+See Also: http://downloads.asterisk.org/pub/security/AST-2014-012.html
 ---
  main/acl.c | 2 +-
  1 file changed, 1 insertion(+), 1 deletion(-)
