@@ -1,8 +1,12 @@
 From 90cdc0d1c75ac44837da9ff4a6cecf754d99e4f9 Mon Sep 17 00:00:00 2001
 From: Joshua Colp <jcolp@digium.com>
 Date: Thu, 20 Nov 2014 14:20:08 +0000
-Subject: [PATCH 1/3] AST-2014-014: Fix race condition where channels may get
- stuck in ConfBridge under load.
+Subject: High call load may result in hung channels in ConfBridge
+CVE: CVE-2014-8414
+Origin: http://svnview.digium.com/svn/asterisk?view=rev&rev=428299
+Bug: https://issues.asterisk.org/jira/browse/ASTERISK-24440
+
+ConfBridge is the voice conferencing application in Asterisk.
 
 Under load it was possible for the bridging API, and thus ConfBridge, to get
 channels that may have hung up stuck in it. This is because handling of state
@@ -13,13 +17,11 @@ had been hung up this would get overwritten.
 This change adds locking to protect changing of the state and also
 takes into consideration the existing state.
 
-ASTERISK-24440 #close
-Reported by: Ben Klang
+In the default configuration ConfBridge is not used, but its useage is
+common, often for unauthenticated remote users.
 
 Review: https://reviewboard.asterisk.org/r/4173/
-
-
-git-svn-id: http://svn.asterisk.org/svn/asterisk/branches/11@428299 f38db490-d61c-443f-a65b-d21fe96a405b
+See Also: http://downloads.asterisk.org/pub/security/AST-2014-014.html
 ---
  main/bridging.c | 26 +++++++++++++++++++++-----
  1 file changed, 21 insertions(+), 5 deletions(-)
